# Enhancing-Privacy-and-Utility-in-FL

./: .gitignore  README.md  celeba.ipynb  converter.py  fair_face.ipynb  plots_paper.ipynb  pyproject.toml  requirements.txt  results.txt  shap_images.ipynb  test_pool.py
DatasetConfigurations/: classic_percentage.json  percentage_custom_max_samples.json  percentage_max_samples_underrepresented_class.json  stratified.json  stratified_cluster_and_nodes.json  stratified_custom_max_samples_underrepresented_classes.json  stratified_custom_max_samples_underrepresented_classes_percentage_only_some_nodes.json  stratified_max_sample.json
docs/: docusaurus.config.js
docs/docs/: BuildingBlocks.md  Examples.md  Tasks.md  configuration_file.md  custom_dataset.md  dataset_generation.md  intro.md
examples/celeba/: run_test.sh
examples/cifar/: run_experiment.sh  test.json
examples/contribution/: test.json
examples/covertype/: all.sh  all_2.sh  all_3.sh  run.sh
examples/dutch/: all.sh  all_1.sh  all_2.sh  all_3.sh  run_test.sh
examples/experiment/: generate_dataset.py  run_test.py  test.json
examples/fair_face/: generate_dataset.py  run_test.py  test.json
examples/imaginette/: run_test.sh
examples/income/: all.sh  all_1.sh  all_2.sh  analysis.ipynb  baselines.sh  run_test.sh  split_data.ipynb
examples/mnist/: run_test.sh
examples/new_architecture/: baseline.json  generate_dataset.py  mnist_baseline.json  mnist_baseline_2.json  p2p+privacy_server.json  p2p+privacy_server_2.json  p2p+server.json  p2p_private+privacy_server.json  p2p_private+privacy_server_equal.json  privacy_server.json  privacy_server_2.json  privacy_server_different.json  privacy_server_different_2.json  privacy_server_p2p_equal.json  privacy_server_p2p_equal_2.json  private_1.json  private_2.json  run_experiment.sh  run_test.py  test.json
examples/run_experiment/: generate_dataset.py
pistacchio/DataSplit/: data_split.py  dataset_downloader.py  generate_dataset.py
pistacchio/Exceptions/: errors.py
pistacchio/Experiments/: run_experiments.py
pistacchio/Models/: celeba.py  federated_model.py
pistacchio/Utils/: communication_channel.py  preferences.py  utils.py
pistacchio_light/Behaviour/: environment.py  simulation.py
pistacchio_light/DataSplit/: data_split.py  dataset_downloader.py  generate_dataset.py  storage_manager.py
pistacchio_light/Models/: federated_model.py  mnist.py  model_selection.py
pistacchio_light/Utils/: configure_preferences.py  phases.py  preferences.py  task.py  utils.py  weights.py
pistacchio_simulator/: Dockerfile  celeba_test.ipynb  mnist_test.ipynb  reproducible_example.py  reproducible_example_celeba.py  test.ipynb  test_pool.py
pistacchio_simulator/DataSplit/: custom_dataset.py  dataset_downloader.py  generate_dataset.py  split_types.py  tabular_split.py
pistacchio_simulator/Exceptions/: errors.py
pistacchio_simulator/Experiments/: run_experiments.py
pistacchio_simulator/FederatedDataset/: partition_dataset copy.py  partition_dataset.py
pistacchio_simulator/Models/: celeba.py  cifar.py  fair_face.py  fashion_mnist.py  federated_model.py  imaginette.py  mnist.py
pistacchio_simulator/Utils/: communication_channel.py  data_loader.py  end_messages.py  learning.py  performances.py  preferences.py  task.py  utils.py
plots/: plots.ipynb  plots_secrypt.ipynb
test/: conftest.py
test/Components/: test_federated_node.py
test/DataSplit/: test_custom_dataset.py  test_data_split.py  test_storage_manager.py
test/Models/: test_celeba.py  test_cifar.py  test_fashion_mnist.py  test_federated_model.py  test_mnist.py
test/Utils/: test_communication.py  test_data_loader.py  test_preferences.py  test_utils.py
(+862 files in other folders)
